# lci

./: .dartai-locks.json  .gitignore  .golangci.yml  .goreleaser.yml  .lci.kdl  .npmignore  LICENSE  Makefile  README.md  TEST_STATUS_REPORT.md  go.mod  go.sum  package.json  pyproject.toml
.claude/: dartai-loop.json  dartai.local.md  workflow-loop-state.json  workflow-tasks.md
.claude/workflow-history/: session-7fc38e78-14c1-45e3-a2b2-c1a7aaf1c0dd.json  session-cb7083fc-d855-4192-b892-909a416e5902.json
.github/workflows/: ci.yml  release.yml
cmd/decode_ids/: main.go
cmd/fileservice-compliance/: main.go
cmd/lci/: debug.go  main.go  main_mcp_test.go  main_server.go  main_test.go  search.go  status.go
cmd/profile_indexing/: main.go
cmd/profile_workflow/: main.go
cmd/sizecheck/: main.go
docs/: testing-guide.md  testing-strategy.md
docs/architecture/: fileservice-abstraction.md
internal/alloc/: slab_allocator.go  slab_allocator_test.go  trigram_predictor.go
internal/analysis/: cached_metrics_calculator.go  cached_metrics_calculator_test.go  cyclomatic_complexity_test.go  dependency_tracker.go  duplicate_detector.go  go_analyzer.go  interfaces.go  javascript_analyzer.go  javascript_gofast_analyzer.go  known_functions.go  (+17 more)
npm/: package.json
real_projects/: README.md
scripts/: add-real-projects.sh  build_wheels.py  port-from-original.sh  verify-parity.sh
testhelpers/: README_TEST_ISOLATION.md  TEST_HELPERS.md  baselines.go  config_builder.go  debug.go  debug_test.go  events.go  flaky_detector.go  flaky_detector_test.go  isolated_test_patterns.go  monitor.go  setup.go  shared_state_converter.go  test_data_builder.go  test_isolation.go  test_validation.go
(+620 files in other folders)
