[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightning-code-index"
dynamic = ["version"]
description = "Lightning Code Index - Sub-millisecond semantic code search and analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Standard Beagle" }
]
keywords = ["code-search", "semantic-search", "code-analysis", "mcp", "indexing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Indexing",
]

[project.urls]
Homepage = "https://github.com/standardbeagle/lci"
Repository = "https://github.com/standardbeagle/lci"
Issues = "https://github.com/standardbeagle/lci/issues"

[project.scripts]
lci = "lci:main"

[tool.hatch.version]
path = "python/lci/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["python/lci"]

[tool.hatch.build.targets.sdist]
include = [
    "/python",
    "/README.md",
    "/LICENSE",
]
